<resources>
    <string name="app_name">FitnessApp</string>
    <string name="start">START</string>
    <string name="addName">Podaj nazwe ćwiczenia</string>
    <string name="addSeries">Podaj sugerowaną liczbę serii</string>
    <string name="addRepetition">Podaj sugerowaną liczbę powtórzeń w serii</string>
    <string name="labelCategories">Zaznacz najwięcej pasujących kategorii</string>
    <string name="categoryLowerPartsBody">Dolne partie ciała</string>
    <string name="categoryUpperPartsBody">Górne partie ciała</string>
    <string name="categoryStrength">Siłowe</string>
    <string name="categoryEndurance">Wytrzymałościowe</string>
    <string name="categoryCircumferential">Obwodowe</string>
    <string name="categoryFunctional">Funkcjonalne</string>
    <string name="categoryRelaxing">Relaksacyjne</string>
    <string name="alertDialogTitleLackOfData">Brak Danych</string>
    <string name="alertDialogMessageLackOfData">Proszę podać niebędna dane: nazwę ćwiczenia</string>
    <string name="back">Wróć</string>
    <string name="addExercise">Dodano ćwiczenie</string>
    <string name="alertDialogMessageAddNextExercise">Czy chcesz dodać kolejne ćwiczenie?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="searchExercise">Podaj nazwę ćwiczenia</string>
</resources>