<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllExercise.AllExercises"
    android:background="@drawable/background_1">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSearchExercise"
        android:layout_width="348dp"
        android:layout_height="49dp"
        android:background="@drawable/search_panel"
        android:hint="@string/searchExercise"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        android:layout_marginTop="20dp"></EditText>

    <CheckBox
        android:id="@+id/checkBoxCategoryUpperPartsBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryUpperPartsBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchExercise" />

    <CheckBox
        android:id="@+id/checkBoxCategoryStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryStrength"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxCategoryEndurance"
        app:layout_constraintStart_toEndOf="@+id/checkBoxCategoryUpperPartsBody"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchExercise" />

    <CheckBox
        android:id="@+id/checkBoxCategoryEndurance"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryEndurance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchExercise" />

    <CheckBox
        android:id="@+id/checkBoxcategoryCircumferential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryCircumferential"
        app:layout_constraintStart_toStartOf="@+id/checkBoxCategoryLowerPartsBody"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryLowerPartsBody" />

    <CheckBox
        android:id="@+id/checkBoxcategoryFunctional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryFunctional"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxcategoryRelaxing"
        app:layout_constraintStart_toEndOf="@+id/checkBoxCategoryLowerPartsBody"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryStrength" />

    <CheckBox
        android:id="@+id/checkBoxcategoryRelaxing"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryRelaxing"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxCategoryEndurance"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryEndurance" />

    <CheckBox
        android:id="@+id/checkBoxCategoryLowerPartsBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoryLowerPartsBody"
        app:layout_constraintStart_toStartOf="@+id/checkBoxCategoryUpperPartsBody"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryUpperPartsBody" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewAllExercises"
        android:layout_width="394dp"
        android:layout_height="480dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxcategoryCircumferential"></androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>