<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExercise.AddExercise"
    android:background="@drawable/background_1">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextExerciseName"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/addName"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:shadowRadius="10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <EditText
        android:id="@+id/editTextNumberOfSeries"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="40dp"
        android:hint="@string/addSeries"
        android:inputType="number"
        android:padding="10dp"
        android:shadowRadius="10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExerciseName" />

    <EditText
        android:id="@+id/editTextRepetition"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="40dp"
        android:hint="@string/addRepetition"
        android:inputType="number"
        android:padding="10dp"
        android:shadowRadius="10"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberOfSeries" />

    <TextView
        android:id="@+id/optionalTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextRepetition"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepetition" />

    <TextView
        android:id="@+id/optionalTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberOfSeries"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberOfSeries" />

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/labelCategories"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepetition" />

    <CheckBox
        android:id="@+id/checkBoxCategoryLowerPartsBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/categoryLowerPartsBody"
        app:layout_constraintStart_toStartOf="@+id/textViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

    <CheckBox
        android:id="@+id/checkBoxCategoryUpperPartsBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/categoryUpperPartsBody"
        app:layout_constraintStart_toStartOf="@+id/textViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryLowerPartsBody" />

    <CheckBox
        android:id="@+id/checkBoxCategoryStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/categoryStrength"
        app:layout_constraintStart_toStartOf="@+id/textViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryUpperPartsBody" />

    <CheckBox
        android:id="@+id/checkBoxCategoryEndurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/categoryEndurance"
        app:layout_constraintStart_toStartOf="@+id/textViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryStrength" />

    <CheckBox
        android:id="@+id/checkBoxcategoryCircumferential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/categoryCircumferential"
        app:layout_constraintStart_toEndOf="@+id/checkBoxCategoryLowerPartsBody"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

    <CheckBox
        android:id="@+id/checkBoxcategoryFunctional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/categoryFunctional"
        app:layout_constraintStart_toEndOf="@+id/checkBoxCategoryLowerPartsBody"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxcategoryCircumferential" />

    <CheckBox
        android:id="@+id/checkBoxcategoryRelaxing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:text="@string/categoryRelaxing"
        app:layout_constraintStart_toEndOf="@+id/checkBoxCategoryLowerPartsBody"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxcategoryFunctional" />


    <ImageButton
        android:id="@+id/buttonSaveExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCategoryEndurance" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>